giao diện sidebar và lpc

--- a/admin/src/index.html
+++ b/admin/src/index.html
@@ -7,13 +7,8 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
     />
-    <link
-      rel="icon"
-      href="assets/favicon.ico"
-      type="image/x-icon"
-    />
-   
-
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+    <base href="/" />
 
     <!-- Fonts and icons -->
     <script src="assets/js/plugin/webfont/webfont.min.js"></script>
@@ -75,7 +70,6 @@
 
     <!-- Kaiadmin JS -->
     <script src="assets/js/kaiadmin.min.js"></script>
-
 
     <script>
       $("#lineChart").sparkline([102, 109, 120, 99, 110, 105, 115], {
